resource/ibmace.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: ace-server-ms1
  namespace: ace
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - ace-server-ms1
        from:
          kind: ImageStreamTag
          namespace: ace
          name: 'ace-cicd-sample-ms1:latest'
  replicas: 1
  selector:
    app: ace-server-ms1
    deploymentconfig: ace-server-ms1
  template:
    metadata:
      labels:
        app: ace-server-ms1
        deploymentconfig: ace-server-ms1
    spec:
      containers:
        - name: ace-server-ms1
          image: >-
            __IMAGE__
          ports:
            - containerPort: 7800
              protocol: TCP
          volumeMounts:
            - name: webusers
              mountPath: "/home/aceuser/initial-config/webusers"
            - name: keystore
              mountPath: "/home/aceuser/initial-config/keystore"
            - name: truststore
              mountPath: "/home/aceuser/initial-config/truststore"
            - name: odbcini
              mountPath: "/home/aceuser/initial-config/odbcini"
            - name: policy
              mountPath: "/home/aceuser/initial-config/policy"
            - name: serverconf
              mountPath: "/home/aceuser/initial-config/serverconf"
            - name: setdbparms
              mountPath: "/home/aceuser/initial-config/setdbparms"
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      volumes:
        - name: webusers
          secret:
            secretName: ace-server-ms1-secret
            optional: true
            items:
            - key: viewerusers
              path: viewer-users.txt
            - key: adminusers
              path: admin-users.txt
        # Marked as optional as the passphrase is not required and may not be provided
        - name: keystore
          secret:
            secretName: ace-server-ms1-secret
            optional: true
            items:
            - key: keystoreKey-mykey
              path: mykey.key
            - key: keystoreCert-mykey
              path: mykey.crt
            - key: keystorePass-mykey
              path: mykey.pass
        # Not marked as optional as the user has specified this certificate should exist in the secret
        - name: truststore
          secret:
            secretName: ace-server-ms1-secret
            optional: true
            items:
            - key: truststoreCert-mykey
              path: mykey.crt
        - name: odbcini
          secret:
            secretName: ace-server-ms1-secret
            optional: true
            items:
            - key: odbcini
              path: odbc.ini
        - name: policy
          secret:
            secretName: ace-server-ms1-secret
            optional: true
            items:
            - key: policy
              path: default.policyxml
            - key: policyDescriptor
              path: policy.descriptor
        - name: serverconf
          secret:
            secretName: ace-server-ms1-secret
            optional: true
            items:
            - key: serverconf
              path: server.conf.yaml
        - name: setdbparms
          secret:
            secretName: ace-server-ms1-secret
            optional: true
            items:
            - key: setdbparms
              path: setdbparms.txt

      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
