resource/ace-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ace-server-ms1-svc
  namespace: ace
spec:
  ports:
    - name: 7600-tcp
      protocol: TCP
      port: 7600
      targetPort: 7600
    - name: 7800-tcp
      protocol: TCP
      port: 7800
      targetPort: 7800
  selector:
    app: ace-server-ms1
