resource/ace-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ace-server-ms1-route
  namespace: ace
  labels:
    app: ace-server-ms1
spec:
  host: >-
    ace-server-ms1-ace.mycluster-tok05-b3c4x16-db4741880439d7b64a494a9a83d1b4a4-0000.jp-tok.containers.appdomain.cloud
  subdomain: ''
  to:
    kind: Service
    name: ace-server-ms1-svc
    weight: 100
  port:
    targetPort: 7800-tcp
  wildcardPolicy: None
